--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,6 +1,8 @@
 #summary The change log of each release.
 #labels Featured
 
+  * 0.2.0.2
+    # Rewrite part of the UI code.
   * 0.2.0.1
     # Update the file traversing code.
     # Fix the bug of creating directories when decrypting files.
